@@ -1,3 +1,7 @@
+2013-10-16  Mike Stump  <mikestump@comcast.net>
+
+	* .dir-locals.el: Add.
+
 2013-10-15  David Malcolm  <dmalcolm@redhat.com>
 
 	* configure.ac: Add --enable-host-shared
